# template-c

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  config.h.in
src/: main.c
test/: main.c
